Bug 108911 - Cannot toggle cursor focus between formula and worksheet
Summary: Cannot toggle cursor focus between formula and worksheet
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.1.0.3 release
Hardware: All macOS (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0
Keywords: bibisected, regression
Depends on:
Blocks: Shortcuts-Mac
  Show dependency treegraph
 
Reported: 2017-07-02 21:16 UTC by bintoro
Modified: 2025-11-09 09:34 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
bibisect log (4.16 KB, text/plain)
2018-04-07 20:55 UTC, eisa01
Details

Note You need to log in before you can comment on or make changes to this bug.
Description bintoro 2017-07-02 21:16:02 UTC
Description:
In OpenOffice, while editing a formula, I was able to hit F2 to toggle the focus between the formula and the worksheet. When the focus was on the worksheet, the selected cell would be inserted in the formula as a reference. This allowed for easy creation of cell references via keyboard navigation (as opposed to clicking on the desired cell using the mouse).

This doesn't seem to work in LibreOffice. Entering cell references via keyboard navigation is only possible right after a new formula is created by hitting "=". As soon as the navigation focus is moved to the formula itself, there seems to be no way to move it back to the worksheet.



Steps to Reproduce:
1. Hit F2 to begin editing a formula.
2. Hit F2 again.
3. Use the arrow keys to move the cursor.


Actual Results:  
The cursor that moves is the one in the formula editor.


Expected Results:
The cell cursor moves. A reference to the selected cell is inserted into the formula.



Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.12; rv:55.0) Gecko/20100101 Firefox/55.0
Comment 1 Alex Thurgood 2017-07-05 11:54:14 UTC
@lkjt : when I tried testing this on 

Version: 5.3.4.2
Build ID: f82d347ccc0be322489bf7da61d7e4ad13fe2ff3
Threads CPU : 4; Version de l'OS :Mac OS X 10.12.5; UI Render : par défaut; Moteur de mise en page : nouveau; 
Locale : fr-FR (fr_FR.UTF-8); Calc: group

the F2 key switched between expanded and minimized display of the function wizard.

If I use F2, after clicking on a cell to select it, I enter formula definition mode, however, I can not then switch back to the sheet in order to navigate via the keyboard to the cell I wish to include in my formula.

Confirming
Comment 2 Alex Thurgood 2017-07-05 11:55:01 UTC
If this is still in ApacheOpenOffice, then for us it is either a regression or a deprecated feature.
Comment 3 Alex Thurgood 2017-07-05 12:10:32 UTC
Tested with 

LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4

where switching with F2 reduces the function wizard window and allows navigation with cursor keys to select cell.
Comment 4 Alex Thurgood 2017-07-05 12:18:41 UTC
Confirming that the toggle only works the very first time with 

Version: 5.3.4.2
Build ID: f82d347ccc0be322489bf7da61d7e4ad13fe2ff3
Threads CPU : 4; Version de l'OS :Mac OS X 10.12.5; UI Render : par défaut; Moteur de mise en page : nouveau; 
Locale : fr-FR (fr_FR.UTF-8); Calc: group

Setting as regression
Comment 5 eisa01 2018-03-29 21:08:41 UTC
Still present

Version: 6.1.0.0.alpha0+
Build ID: a488c7ad2763b944713997911c1ddb0315d8c93f
CPU threads: 2; OS: Mac OS X 10.12.6; UI render: default; 
TinderBox: MacOSX-x86_64@49-TDF, Branch:master, Time: 2018-03-26_00:38:29
Locale: en-US (en_US.UTF-8); Calc: group
Comment 6 eisa01 2018-04-07 20:55:59 UTC
Created attachment 141199 [details]
bibisect log

Bibisected, see log
Comment 7 QA Administrators 2019-04-08 02:46:08 UTC Comment hidden (obsolete)
Comment 8 eisa01 2019-04-20 18:18:15 UTC
This is still present

Version: 6.3.0.0.alpha0+
Build ID: ea9c13be02ba731074fa4207944ff7df40a0fb5c
CPU threads: 2; OS: Mac OS X 10.13.6; UI render: default; VCL: osx; 
TinderBox: MacOSX-x86_64@49-TDF, Branch:master, Time: 2019-04-10_20:43:17
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded
Comment 9 Noah Glenn 2021-02-21 11:52:48 UTC
This problem is still present.
Comment 10 Rick Collins 2022-03-25 18:36:03 UTC
The problem is still present.  It also interferes with editing or adding a reference to a cell immediately adjacent to the cell being edited. If the formula is large enough, the editing field over the cell being edited blocks viewing the adjacent cells.  This makes it impossible to click on it with the cursor.  Without being able to use the arrow keys to select the cell, the only choice remaining is to type the cell reference manually. 

I would have expected this to not take so long to fix.  I'm sure this impacts a lot of users and is rather a headache.
Comment 11 QA Administrators 2024-03-25 03:13:22 UTC Comment hidden (obsolete)
Comment 12 eisa01 2025-03-04 17:34:29 UTC
This is still present

Version: 25.2.1.2 (AARCH64) / LibreOffice Community
Build ID: d3abf4aee5fd705e4a92bba33a32f40bc4e56f49
CPU threads: 10; OS: macOS 15.3.1; UI render: Skia/Raster; VCL: osx
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 13 Neil Roberts 2025-09-03 13:41:33 UTC
I had a go at fixing this here:

https://gerrit.libreoffice.org/c/core/+/190557

In the meantime, as a workaround you can avoid the problem by assigning the “cell edit” command to a different key. That way you can use the new key to start editing the cell and then F2 will continue to work to switch to the mode that lets you select a cell with the cursor keys.
Comment 14 Commit Notification 2025-09-04 08:48:47 UTC
Neil Roberts committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/41acf1ab0e102c2341d2ae0d5d5949c21a962cf2

tdf#108911 Toggle input modes in Cell Edit handler, not input handler

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.