sc/source/ui/inc/inputhdl.hxx
@@ -182,6 +182,7 @@ public:
 
     void            SetMode( ScInputMode eNewMode, const OUString* pInitText = nullptr,
                              ScEditEngineDefaulter* pTopEngine = nullptr );
+    void            StartOrToggleEditMode();
     bool            IsInputMode() const { return (eMode != SC_INPUT_NONE); }
     bool            IsEditMode() const  { return (eMode != SC_INPUT_NONE &&
                                                   eMode != SC_INPUT_TYPE); }
